이것저것 수정,,